# ShuFu

./: .gitattributes  .gitignore  AGENTS.md  AGENTS.zh-CN.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/ai/shufu/app/: MainActivity.kt
android/app/src/main/res/values/: styles.xml
android/shufu-sdk/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
android/shufu-sdk/src/main/: AndroidManifest.xml
android/shufu-sdk/src/main/cpp/: CMakeLists.txt  shufu_jni.cpp
android/shufu-sdk/src/main/kotlin/ai/shufu/sdk/: Models.kt  ShuFuDiscoveryClient.kt  ShuFuHttpClient.kt  ShuFuMemoryStore.kt  ShuFuSyncEngine.kt
android/shufu-sdk/src/test/kotlin/ai/shufu/sdk/: DiscoveryClientTest.kt  ModelsTest.kt  (+2 more)
docs/: development-log.md  product-v0.1.md  product-v0.2.md  product-v0.3.md  product-v0.4.md  protocol-v0.1.md  protocol-v0.2.md  protocol-v0.3.md  protocol-v0.4.md  release-process.md  test-report-v0.1.md  test-report-v0.2.md  test-report-v0.3.md  test-report-v0.4.md  v0.1-design.md  v0.2-design.md  v0.3-design.md  v0.4-design.md
esp32/: README.md
esp32/components/shufu/: CMakeLists.txt  idf_component.yml
esp32/components/shufu/include/: shufu_client.h  shufu_stream.h  shufu_tools.h
esp32/components/shufu/src/: shufu_client.c  shufu_stream.c  shufu_tools.c
esp32/examples/node_client/: CMakeLists.txt
esp32/examples/node_client/main/: idf_component.yml  main.c
esp32/tests/: portable_test.c
esp32/tests/stubs/: cJSON.h  esp_err.h  esp_http_client.h
outputs/: SHA256SUMS-v0.2.txt  ShuFu-v0.1-产品设计与路线图.pptx  ShuFu-v0.2-android-arm64.apk  ShuFu-v0.2-sdk-arm64.aar  v0.1-verification.json  v0.2-verification.json  v0.3-verification.json  v0.4-verification.json
src/shufu/: __init__.py  agent.py  agent_audit.py  agent_lite.py  cli.py  client.py  context.py  discovery.py  memory.py  node.py  planner_conformance.py  service.py  summary.py  types.py
src/shufu/runtimes/: __init__.py  base.py  echo.py  llama_cpp.py  openai_compat.py
tests/: test_agent_and_cli.py  test_discovery.py  test_memory.py  test_node.py  test_service.py  test_v01_compat.py  test_v03_esp32_contract.py  test_v03_streaming.py  test_v03_sync.py  test_v04_agent.py  test_v04_cli.py  test_v04_context_summary.py  test_v04_planner_conformance.py
(+3 files in other folders)
